--- a/src/client/styles/_base.scss
+++ b/src/client/styles/_base.scss
@@ -17,3 +17,7 @@ a[md-list-item],
   text-transform: uppercase;
 }
 
+.mat-sidenav-content {
+  flex: 1;
+}
+
